# Librarian

./: .gitignore
app/: package-lock.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  page.tsx
client-tests/: Cargo.toml
client-tests/src/: main.rs
infra/: Cargo.toml  mcps.json
infra/src/: main.rs  utils.rs
infra/src/backend/: mod.rs
