[package]
name = "testingitout"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.41"
anyhow = "1.0.100"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
x402-reqwest = "0.4.0"
x402-rs = "0.9.0"
