[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.41"
anyhow = "1.0.100"
axum = "0.8.6"
dotenv = "0.15.0"
opentelemetry = "0.31.0"
rig-core = { version = "0.22.0", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.20"
url = "2.5.7"
uuid = "1.18.1"
x402-axum = "0.5.0"
x402-rs = "0.9.0"
